Fix mobile footer cutting off
- removed vh for app grid height
- added hook for window innerHeight
- set height with a resize eventListener
- this should fix chrome/safari's url bar hidden/showing

--- a/src/components/app-grid/AppGrid.module.css
+++ b/src/components/app-grid/AppGrid.module.css
@@ -1,5 +1,5 @@
-.app-grid {
-  height: 100vh;
+.app_grid {
+  /* height: 100vh; */
   display: grid;
 
   grid-template-columns: 1fr;
@@ -17,10 +17,10 @@
   bottom: 0;
 }
 
-.app-grid > header {
+.app_grid > header {
   grid-area: header;
 }
-.app-grid > main {
+.app_grid > main {
   grid-area: main;
   height: calc(100vh - 85px - 56px);
   overflow: hidden;
@@ -29,7 +29,7 @@
   grid-template-rows: 1fr;
   grid-template-columns: 1fr minmax(0, 560px) 1fr;
 }
-.app-grid main > section {
+.app_grid main > section {
   grid-area: 1 / 2 / 1 / 3;
 
   display: grid;
@@ -37,17 +37,18 @@
   padding: 0!important;
   background: none!important;
 }
-.app-grid main > section.full {
+.app_grid main > section.full {
   grid-area: 1 / 1 / 1 / 4
 }
-.app-grid > footer {
+.app_grid > footer {
   grid-area: footer;
+  min-height: 85px;
 }
 
 @media screen and (min-width: 560px) {
   
   
-  .app-grid {  
+  .app_grid {  
     grid-template-rows: 56px 48px 1fr;
     
     grid-template-areas: 
@@ -57,7 +58,7 @@
   }
 
 
-  .app-grid > footer {
+  .app_grid > footer {
     grid-area: subheader;
   }
   
