--- a/src/components/dialog/Dialog.module.css
+++ b/src/components/dialog/Dialog.module.css
@@ -1,5 +1,5 @@
 .grid {
-  height: 100vh;
+  /* height: 100vh; */
   display: grid;
 
   grid-template-columns: 1fr;
