--- a/src/pages/splash/Splash.module.css
+++ b/src/pages/splash/Splash.module.css
@@ -1,6 +1,6 @@
 .layout {
   background: #FFCD1E;
-  height: 100vh;
+  /* height: 100vh; */
 
   display: flex;
   align-items: center;
@@ -11,7 +11,7 @@
   background-color: #08090B;
 }
 .layout > div {
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
